--- a/style.css
+++ b/style.css
@@ -11,3 +11,15 @@ body{
     text-align: center;
     line-height: 550px;
 }
+
+footer{
+    position: fixed;
+    bottom: 0;
+}
+
+.footer-distributed{
+    background-color: #292c2f;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    width: 100%;
+}
