--- a/style.css
+++ b/style.css
@@ -28,3 +28,30 @@ footer{
     padding: 55px 50px;
     margin-top: 80px;
 }
+
+.footer-distributed.footer-left,
+.footer-distributed.footer-center,
+.footer-distributed.footer-right{
+    display: inline-block;
+    vertical-align: top;
+}
+
+.footer-distributed.footer-left{
+    width: 40%;
+}
+
+.footer-distributed h3{
+    color: #ffffff;
+    font: normal 36px 'Cookie',cursive;
+    margin: 0;
+}
+
+.footer-distributed h3 span{
+    color: #5383d3;
+}
+
+.footer-distributed.footer-links{
+    color: #ffffff;
+    margin: 20px 0 12px;
+    padding: 0;
+}
