--- a/style.css
+++ b/style.css
@@ -1,57 +1,64 @@
-body{
-    margin: 0;
-    padding: 0;
+body {
+	margin: 0;
+	padding: 0;
 }
 
-.main{
-    max-height: 550px;
-    background-color: #292c2f;
-    color: white;
-    font-size: 38pt;
-    text-align: center;
-    line-height: 550px;
+.main {
+	max-height: 550px;;
+	background-color: #292c2f;
+	color: white;
+	font-size: 38pt;
+	text-align: center;
+	line-height: 550px;
 }
-
 footer{
-    position: fixed;
-    bottom: 0;
+	position: fixed;
+	bottom: 0;
 }
-
 .footer-distributed{
-    background-color: #292c2f;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    width: 100%;
-    text-align: left;
-    font: bold 16px sans-serif;
-
-    padding: 55px 50px;
-    margin-top: 80px;
+	background-color: #292c2f;
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+	box-sizing: border-box;
+	width: 100%;
+	text-align: left;
+	font: bold 16px sans-serif;
+ 
+	padding: 55px 50px;
+	margin-top: 80px;
+}
+ 
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+	display: inline-block;
+	vertical-align: top;
+}
+ 
+.footer-distributed .footer-left{
+	width: 40%;
 }
 
-.footer-distributed.footer-left,
-.footer-distributed.footer-center,
-.footer-distributed.footer-right{
-    display: inline-block;
-    vertical-align: top;
-}
-
-.footer-distributed.footer-left{
-    width: 40%;
-}
 
 .footer-distributed h3{
-    color: #ffffff;
-    font: normal 36px 'Cookie',cursive;
-    margin: 0;
+	color:  #ffffff;
+	font: normal 36px 'Cookie', cursive;
+	margin: 0;
 }
-
+ 
 .footer-distributed h3 span{
-    color: #5383d3;
+	color:  #5383d3;
 }
-
-.footer-distributed.footer-links{
-    color: #ffffff;
-    margin: 20px 0 12px;
-    padding: 0;
+ 
+ 
+.footer-distributed .footer-links{
+	color:  #ffffff;
+	margin: 20px 0 12px;
+	padding: 0;
+}
+ 
+.footer-distributed .footer-links a{
+	display:inline-block;
+	line-height: 1.8;
+	text-decoration: none;
+	color:  inherit;
 }
